--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,20 @@
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.0.0</version>
       </plugin>
+      <plugin>
+                <!-- Build an executable JAR -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>com.schongeproductions.texteditor.EditorGUI</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
       </plugins>
     </pluginManagement>
   </build>
