--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties> 
     <build>
+        <!-- To define the plugin version in your parent POM -->
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -56,23 +57,40 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>2.4</version>
-                    <configuration>
+                        <configuration>
                         <archive>
                             <manifest>
                                 <addClasspath>true</addClasspath>
                                 <mainClass>com.schongeproductions.texteditor.EditorGUI</mainClass>
                             </manifest>
                         </archive>
-                    </configuration>
+                        </configuration>
                 </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-project-info-reports-plugin</artifactId>
-            <version>2.9</version>
-        </dependency>
-     </dependencies>
+                 <!-- To use the plugin goals in your POM or parent POM -->
+                            <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-project-info-reports-plugin</artifactId>
+                                        <version>2.9</version>
+                            </plugin>
+                    </plugins>
+    </pluginManagement>
+    <plugins>
+     <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-project-info-reports-plugin</artifactId>
+          <version>2.9</version>
+        </plugin>
+        </plugins>
+     
+    </build> 
+    <!-- To use the report goals in your POM or parent POM -->
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>2.9</version>
+              </plugin>
+         </plugins>
+  </reporting>
 </project>
